--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -25,38 +25,40 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* Application theme */
 
   :root {
-    --primary-text-color: #212121;
-    --primary-background-color: #ffffff;
-    --secondary-text-color: #737373;
-    --disabled-text-color: #9b9b9b;
-    --divider-color: #dbdbdb;
-    --primary-color: #3f51b5;
-    --light-primary-color: #c5cae9;
-    --dark-primary-color: #303f9f;
-    --accent-color: #ff4081;
-    --light-accent-color: #ff80ab;
-    --dark-accent-color: #f50057;
-
-    /* Components */
-
-    /* paper-drawer-panel */
-    --drawer-menu-color: #ffffff;
-    --drawer-border-color: 1px solid #ccc;
-    --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
-
-    /* paper-menu */
-    --paper-menu-background-color: #fff;
-    --menu-link-color: #111111;
+    --dark-primary-color:       #455A64;
+    --default-primary-color:    #607D8B;
+    --light-primary-color:      #CFD8DC;
+    --text-primary-color:       #FFFFFF;
+    --accent-color:             #FFC107;
+    --primary-background-color: #CFD8DC;
+    --primary-text-color:       #212121;
+    --secondary-text-color:     #727272;
+    --disabled-text-color:      #BDBDBD;
+    --divider-color:            #B6B6B6;
   }
-
-  /* General styles */
 
   body {
     @apply(--layout-fullbleed);
     @apply(--layout-vertical);
   }
 
+  app-header {
+    color: #fff;
+    background-color: var(--dark-primary-color);
+  }
 
+  app-toolbar {
+    display: flex;
+  }
+
+  app-toolbar h3 {
+    flex: 1;
+  }
+
+  app-toolbar a {
+    color: #fff;
+    text-decoration: none;
+  }
 
   paper-material {
     border-radius: 2px;
