--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -14,3 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../styles/app-theme.html">
 
+<link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
+<link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
+<link rel="import" href="../bower_components/paper-material/paper-material.html">
+
