--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -40,8 +40,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* General styles */
 
   body {
-    @apply(--layout-fullbleed);
-    @apply(--layout-vertical);
+    margin: 0;
   }
 
 
