--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -68,6 +68,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     background: white;
   }
 
+  .users a {
+    color: #333;
+    text-decoration: none;
+  }
+
     /* Breakpoints */
 
   /* Small */
