--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -17,6 +17,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'home';
     });
 
+    page('/user/:id', function(data) {
+      app.route = 'user';
+      app.params = data.params;
+    });
+
     // add #! before urls
     page({
       hashbang: true
