--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -21,3 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 
+<link rel="import" href="../elements/user-detail/user-detail.html">
+
+
+
